# tui-chatbot

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  coverage.xml  pyproject.toml  testenv.md
docs/: engineer_fix_report_1.md  pi-mono-vs-tui-chatbot-analysis.md
docs/approval/: 1.md  2.md  3.md  4.md  5.md  6.md
docs/designer/: 1.md  11.md  12.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
docs/designer/review/: 1-fix.md  1.md
docs/integration_test/: 1.md  10.md  12.md  12_verify.md  2.md  3.md  4.md  5.md  6.md  8.md  8_verify.md  9.md
docs/reviewer/: 1.md  2.md  3.md  4.md  5.md  6.md
docs/tester/: 1.md  2.md  3.md  4.md  5.md  6.md
refs/: setup.sh
src/tui_chatbot/: __init__.py  __main__.py  config.py  daemon.py  error_handler.py  event_stream.py  events.py  frontend.py  handlers.py  indicator.py  main.py  models.py  shell.py  types.py
src/tui_chatbot/agent/: __init__.py  loop.py  tool.py  tools.py  types.py
src/tui_chatbot/config/: __init__.py  manager.py
src/tui_chatbot/core/: __init__.py  abort_controller.py  (+2 more)
tests/: conftest.py  test_abort_controller.py  test_agent_loop.py  test_agent_types.py  test_config_manager.py  test_core_events.py  test_daemon.py  test_error_handler.py  test_event_stream.py  test_events.py  test_export.py  test_frontend.py  test_improvements.py  test_indicator.py  test_integration.py  test_models.py  test_ollama_provider.py  test_openai_provider.py  test_provider_registry.py  test_search.py  test_search_cache.py  test_session_manager.py  test_shell.py  test_tool_framework.py  test_tools.py  test_types.py
(+19 files in other folders)
